src/test/testData/kubernetes/KUBE006/cronjob.yaml.denied
apiVersion: batch/v1beta1
kind: CronJob
metadata:
  name: hello
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec :
          containers :
            -
              name : influxdb
              image : influxdb
              ports :
                -
                  containerPort : 8089
                <error descr="HostPort opens the node's port. Remove hostPort definition and/or use Service/Ingress instead.">-
                  containerPort : 8086
                  hostPort : 8086 # We look for this</error>
                -
                  containerPort : 8087
          restartPolicy: OnFailure
